--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ input:focus {
 /* ------------  Start Components  ---------- */
 h1 {
     color: #1F1F1F;
-    font-size: 100px;
+    font-size: 100px !important;
 }
 
 h2 {
